build: use jlink to build a custom jre (went from docker image of 340 MB to 160 MB)